fixed card sizes as per request, trying to close card transition when no longer visible on screen... not working..

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -87,7 +87,7 @@
     }
     &-m {
         @extend %card-shared;
-        width: 550px;
-        height: 650px;
+        width: 500px;
+        height: 600px;
     }
 }
